--- a/src/style/style.css
+++ b/src/style/style.css
@@ -7,6 +7,11 @@ body{
     background-color: #B9001f;
 }
 
+a{
+    text-decoration: none;
+    color: #fff;
+}
+
 
 body::before{
     content: "";
@@ -119,6 +124,10 @@ body::before{
     width: 100%;
 }
 
+.s-controller a{
+    text-decoration: none;
+}
+
 .s-controller_button{
     display: flex;
     align-items: center;
@@ -134,6 +143,7 @@ body::before{
     cursor: pointer;
     z-index: 1;
     transition: 0.3s ease-in-out;
+    text-transform: none;
 
 }
 
@@ -156,4 +166,127 @@ body::before{
     transition: 0.3s ease-in-out;
     transform: scale(1.1);
 
+}
+
+.tobey-background{
+    background-image: url("../../public/assets/tobey-background.png");
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.logo-movie{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 50px;
+    margin-left: 100px;
+}
+
+.logo-movie img{
+    max-width: 45rem;
+    width: 100%;
+    height: auto;
+    margin-left: 10px
+}
+
+.card-menu{
+    max-width: 100%;
+    height: auto;
+    margin-right: 40%;
+    margin-left: 100px;
+    margin-top: 100px;
+    border-radius: 10px;
+    z-index: 1;
+    box-shadow: 0 0 10px #000;
+    padding: 10px;
+    
+}
+
+.card-menu p{
+    max-width: 100%;
+    height: auto;
+    min-width: 100%;
+
+}
+
+.menu-div{
+    max-width: 100%;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    
+}
+
+.menu-info{
+    max-width: 100%;
+    border-radius: 10px;
+    background-color: #B9001f;
+    text-align: center;
+    font-size: 1rem;
+    z-index: 1;
+    margin-right: 8px;
+    align-items: center;
+    padding: 10px;
+    transition: 0.3s ease-in-out;
+   
+}
+
+.menu-info:hover{
+    transform: scale(1.1);
+    color: #fff;
+}
+
+.div-trailler{
+    max-width: 100%;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 100px;
+    margin-right: 40%;    
+}
+
+.div-trailler a:hover{
+    text-decoration: none;
+    color: #B9001f;
+    transition: 0.3s ease-in-out;
+    transform: scale(1.1);
+}
+
+.div-trailler img{
+    max-width: 5%;
+    margin-right: 1rem;
+}
+
+.galery-photos{
+    max-width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 100px;
+    margin-right: 40%;
+}
+
+.galery-photos img:hover{
+    transition: 0.3s ease-in-out;
+    transform: scale(1.1);
+}
+
+.galery-photos img{
+    max-width: 30%;
+    margin-right: 1rem;
+    border: solid 2px #B9001f;
+    border-radius: 10px;
+    transition: 0.3s ease-in-out;
 }
