iniciando page tom

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -290,3 +290,5 @@ body::before{
     border-radius: 10px;
     transition: 0.3s ease-in-out;
 }
+
+/* colocar um estilo com uma background image que ocupe a tela toda idenpendente de quantos elementos tiver */
