--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,5 +1,4 @@
 
-
 @import url('reset.css');
 @import url('global.css');
 
@@ -195,15 +194,13 @@ body::before{
 
 .card-menu{
     max-width: 100%;
-    height: auto;
     margin-right: 40%;
     margin-left: 100px;
-    margin-top: 100px;
+    margin-top: 10px;
     border-radius: 10px;
-    z-index: 1;
     box-shadow: 0 0 10px #000;
     padding: 10px;
-    
+
 }
 
 .card-menu p{
@@ -284,11 +281,32 @@ body::before{
 }
 
 .galery-photos img{
-    max-width: 30%;
+    max-width: 25%;
     margin-right: 1rem;
     border: solid 2px #B9001f;
     border-radius: 10px;
     transition: 0.3s ease-in-out;
 }
 
-/* colocar um estilo com uma background image que ocupe a tela toda idenpendente de quantos elementos tiver */
+
+.tom-background{
+    background-image: url("../../public/assets/back-tom.png");
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    
+}
+
+.andrew-background{
+    background-image: url("../../public/assets/back-andrew.png");
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    
+}
